2004.04.09

  Moved callback system to be processed within another thread.  This
  allows you to delete the originating stream from the callback.

2004.04.08

  Added callback system for stream stopped events.  (Richard Schaaf
  and Chad Austin)

  Made CDDevice methods use __stdcall on Windows.

  Added operator== and operator!= to RefPtr.  This could fix some
  potential bugs.

2004.04.05

  Added CD audio support through the CDDevice interface.  (Chad Austin
  and Richard Schaaf)

2004.02.02

  Fixed: Speex decoder never actually released its file handle.

2004.01.19

  Fix an mpegsound crash when loading corrupt MP3s (or text files).

  Use _beginthreadex instead of CreateThread.

  Added a button to see the format of streams and sounds in wxPlayer.

  Rewrote the Resampler class to use DUMB's cubic interpolation
  resampler.  (Matt Campbell)

2004.01.17

  Dramatically reduced the latency of the OSS device.  (Matt Campbell)

2004.01.12

  Added MP2 to the list of supported file types, since mpegsound can
  play them.

2004.01.10

  Added Speex support.

2003.11.08

  Fixed: Some MP3 files were returning incorrect sample format
  information, so they sounded wrong.

2003.09.24

  Added pitchshift to the Python bindings.  (Jason Chu)

2003.09.22

  Added support for reading metadata tags from Ogg Vorbis files.
  Interface designed with help from Brian Robb and Andy Friesen.

  Added ID3v1 and ID3v1.1 support.  (Original code written by Brian
  Robb.)

2003.09.04

  Opens MP3 files with ID3v2 tags with the MP3 decoder, not the MOD
  decoder.  The MOD decoder seems to be the most lenient, so it has
  been placed at the end of the autodetect list, behind MP3.

2003.07.17

  Made thread priority work when using pthreads.

2003.07.15

  1.9.3 released.

2003.07.01

  The configure script tries to link a small wxWindows application
  rather than trusting the existence of wx-config in order to find out
  if wxWindows exists.
