@@ -3,6 +3,9 @@
   Moved callback system to be processed within another thread.  This
   allows you to delete the originating stream from the callback.
 
+  Added support for CD audio support on Linux via libcdaudio.  (Chad Austin
+  and Richard Schaaf)
+
 2004.04.08
 
   Added callback system for stream stopped events.  (Richard Schaaf
